--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "express-sanitizer": "^1.0.3",
     "method-override": "^2.3.10",
-    "mongoose": "^5.0.11"
+    "mongoose": "^5.0.11",
+    "passport-local": "^1.0.0"
   }
 }
