--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "express-sanitizer": "^1.0.3",
+    "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.11",
-    "passport-local": "^1.0.0"
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.0"
   }
 }
